<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CourtChoice">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/backgroundImage"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/background_image"/>

    <ImageView
            android:layout_height="50dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/logo"
            android:layout_width="120dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:scaleType="fitCenter"
            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="@+id/backgroundImage"
            android:contentDescription="@string/swoosh_logo"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/courtSelectionText"
            android:id="@+id/courtLayout">
        <ToggleButton
                android:text="@string/indoor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/indoorButton" android:layout_weight="1"
                android:textOff="@string/indoor" android:textOn="@string/indoor"
                android:background="@drawable/swoosh_drawable" android:textColor="#FFFFFF"
                android:fontFamily="@font/gilda_display" android:textSize="18sp" android:layout_marginEnd="16dp"/>
        <ToggleButton
                android:text="@string/outdoor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/outdoorButton" android:layout_weight="1"
                android:textOn="@string/outdoor" android:textOff="@string/outdoor"
                android:background="@drawable/swoosh_drawable" android:textColor="#FFFFFF"
                android:fontFamily="@font/gilda_display" android:textSize="18sp" android:layout_marginStart="16dp"/>
    </LinearLayout>
    <TextView
            android:text="@string/court"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/courtSelectionText" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/logo" android:textSize="30sp" android:textColor="#FFFFFF"
            android:fontFamily="@font/gilda_display"/>
    <TextView
            android:text="@string/level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/courtLayout" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="16dp"
            android:textSize="30sp" android:fontFamily="@font/gilda_display" android:textColor="#FFFFFF"
            android:textAlignment="center"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:id="@+id/levelLayout">
        <ToggleButton
                android:text="@string/beginner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/toggleButton3" android:layout_weight="1"
                android:textColor="#FFFFFF" android:fontFamily="@font/gilda_display" android:textSize="18sp"
                android:background="@drawable/swoosh_drawable" android:textOff="@string/beginner"
                android:textOn="@string/beginner" android:layout_marginEnd="8dp"/>
        <ToggleButton
                android:text="@string/average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/toggleButton4" android:layout_weight="1"
                android:textColor="#FFFFFF" android:fontFamily="@font/gilda_display" android:textSize="18sp"
                android:background="@drawable/swoosh_drawable" android:textOff="@string/average"
                android:textOn="@string/average" android:layout_marginLeft="8dp" android:layout_marginRight="8dp"/>
        <ToggleButton
                android:text="@string/baller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/toggleButton5" android:layout_weight="1"
                android:textColor="#FFFFFF" android:fontFamily="@font/gilda_display" android:textSize="18sp"
                android:background="@drawable/swoosh_drawable" android:textOff="@string/baller"
                android:textOn="@string/baller" android:layout_marginStart="8dp"/>
    </LinearLayout>
    <Button
            android:text="@string/let_s_play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/playButton"
            app:layout_constraintBottom_toBottomOf="@+id/backgroundImage" android:layout_marginBottom="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp" android:textSize="24sp"
            android:textAlignment="center" android:textColor="#FFFFFF" android:fontFamily="@font/gilda_display"
            android:background="@drawable/find_button"/>


</androidx.constraintlayout.widget.ConstraintLayout>