<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ScrimmageDetails">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/desiredleaguebg"
            android:id="@+id/backgroundImage"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/background_image"/>

    <ImageView
            android:layout_height="50dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/logo"
            android:layout_width="120dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:scaleType="fitCenter"
            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="@+id/backgroundImage"
            android:contentDescription="@string/swoosh_logo"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:text="@string/what_kind_of_scrimmage"
            android:textColor="#F7F4F4"
            android:fontFamily="@font/gilda_display" android:textSize="25sp" android:textAlignment="center"
            android:id="@+id/smallTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/logo"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="397dp"
            android:layout_height="204dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/smallTitle"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp">
        <ToggleButton
                android:text="@string/casual_scrimmage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/casualScrimmageButton" android:textOff="@string/casual_scrimmage" android:textOn="@string/casual_scrimmage"
                android:background="@drawable/swoosh_drawable" android:textColor="#FFFFFF"
        />
        <ToggleButton
                android:text="@string/semi_competitive_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" android:id="@+id/semiCompetitiveButton"
                android:textOff="@string/semi_competitive_button" android:textOn="@string/semi_competitive_button"
                android:background="@drawable/swoosh_drawable" android:textColor="#FFFFFF"/>
        <ToggleButton
                android:text="@string/competitive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/competitiveButton"
                android:layout_marginBottom="8sp" android:textOff="@string/competitive" android:textOn="@string/competitive"
                android:background="@drawable/swoosh_drawable" android:textColor="#FFFFFF"/>
    </LinearLayout>
    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/nextButton" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/backgroundImage" android:background="@drawable/find_button"
            android:textColor="#FFFFFF" android:textSize="24sp" android:fontFamily="@font/gilda_display"
            android:textAlignment="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>