<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/welcomescreenbg"
            android:id="@+id/background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerCrop" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0" android:contentDescription="@string/background_image"/>
    <ImageView
            android:layout_height="50dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/logo"
            android:layout_width="120dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="@+id/background" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:scaleType="fitCenter"
            android:contentDescription="@string/swoosh_logo"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:text="@string/find_a_court_to_play_today"
            android:textColor="#F7F4F4"
            android:fontFamily="@font/gilda_display" android:textSize="20sp" android:textAlignment="center"
            android:id="@+id/smallTitle"
            app:layout_constraintTop_toBottomOf="@+id/bigTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:text="@string/work_hard_get_better"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            android:layout_marginTop="80dp" android:textColor="#F7F4F4"
            android:fontFamily="@font/gilda_display" android:textSize="36sp" android:textAlignment="center"
            android:id="@+id/bigTitle" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/find_a_scrimmage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/findScrimmage" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/background" android:fontFamily="@font/gilda_display"
            android:textColor="#D8FFFFFF" android:background="@drawable/find_button" android:textSize="24sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>